FaceID 인증 거부시 비밀번호 입력 기능 추가

--- a/RandomMessageApp/Info.plist
+++ b/RandomMessageApp/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSFaceIDUsageDescription</key>
-	<string>We Need This</string>
+	<string>hi</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
